# nextracks

./: README.md  api.py  index.html  proxy.py  pyproject.toml
templates/: create.html  index.html
tmp/: 2025-07-27_27_Jul_2025_12_20_51.gpx
